plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.homesweet'
version = 'V1.0.1'
description = 'homesweet-back'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

jacoco {
    toolVersion = "0.8.12"
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Core Web & Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Security / OAuth2
   implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
   implementation 'org.springframework.boot:spring-boot-starter-security'

    // Database & Migration
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly   'com.h2database:h2'
    runtimeOnly   'com.mysql:mysql-connector-j'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // Observability
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // Build-time tools
    compileOnly        'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly    'org.junit.platform:junit-platform-launcher'

    // Swagger
    implementation "io.swagger.core.v3:swagger-annotations:2.2.39"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13"

    // Aws
    implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1')
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'

    // WebSocket
    implementation "org.springframework.boot:spring-boot-starter-websocket"

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

}

tasks.test {
    useJUnitPlatform()
    finalizedBy(tasks.jacocoTestReport)
}

tasks.jacocoTestReport {
    dependsOn(tasks.test)
    reports {
        html.required.set(true)
        xml.required.set(true)
        csv.required.set(false)
    }
        // 디렉터리/파일명
    def qTypes = []
    for(qPattern in "**/entity/QA" .. "**/entity/QZ"){
        qTypes.add(qPattern + "*")
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it,
                    exclude: ["**/*Application*"] + qTypes)
        }))
    }

    finalizedBy(tasks.jacocoTestCoverageVerification)
}


tasks.jacocoTestCoverageVerification {
    dependsOn(tasks.jacocoTestReport)
    def qTypes = new ArrayList<String>()
    for (qPattern in '*.entity.QA'..'*.entity.QZ') {
        qTypes.add(qPattern + '*')
    }
    violationRules {
        rule {
            element = 'CLASS'
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
//                minimum = 0.8
            }
            excludes = ['*.common.*', '*.domain.Q*'] + qTypes
        }
    }
}